style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

body {
    margin: 0;
    font-family: 'Inter', sans-serif;
}

#root {
    margin: auto;

    display: flex;
    flex-direction: column;
    height: 100vh;
    max-width: 80ch;
}

header,
section,
main {
    padding: 1rem;    
}

header {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

main {
    flex: 1;
}

form {
    display: flex;
    border: 0.5px solid lightgray;
    border-radius: 5px;
    /* height: 2em; */
}

form * {
    border: none;
}

.search-icon {
    align-self: center;
    padding: 0.5em;
}

.search-input {
    flex: 1;
}

.search-btn {
    padding: 0.5em 2em;
    cursor: pointer;
}

#movie-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.start-exploring {
    display: none;
    text-align: center;
}

.start-exploring-text {
    font-size: 2rem;
    color: #DFDDDD;
}

.movie-container {
    display: flex;
    padding: 0.5rem 0;
}

.movie-container:not(:last-child) {
    border-bottom: 1px solid #DFDDDD;
}

.movie-poster {
    align-self: center;
}

.movie-info {
    padding: 0.5rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 0.1rem;
}

.title-row-container {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.movie-title {
    font-size: 1.5rem;
    font-weight: bold;
}

.movie-rating {
    display: flex;
    align-items: baseline;
    gap: 0.2em;
}

.movie-duration,
.movie-year,
.movie-genres {
    font-size: 0.8rem;
}

.movie-description {
    margin: 0.2rem 0;
    font-size: 0.8rem;
    color: grey;
}

.add-watchlist {
    display: flex;
    /* justify-content: center; */
    align-items: center;
    gap: 0.2rem;
    font-size: 0.8rem;
    cursor: pointer;
}

